deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: poc-stablecoin-admin-http
  namespace: app
spec:
  selector:
    app: poc-stablecoin-admin
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
  clusterIP: None
